--- a/AsanaCanvasSync.ipynb
+++ b/AsanaCanvasSync.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "AsanaCanvasSync.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "mount_file_id": "1r9XLb1gwwnhG7Ul-R3nbEXXSDO2AlVTA",
-      "authorship_tag": "ABX9TyP6hyxgcmywqxcFz6ENngTu",
+      "authorship_tag": "ABX9TyMvxquXoROQyJneZY7XWUIi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,15 +38,47 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-i3MGTPJDTkg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-i3MGTPJDTkg",
+        "outputId": "0d219768-f7c1-4383-e5a8-199767d7e773"
       },
       "source": [
         "# install required packages\r\n",
         "%pip install asana\r\n",
         "%pip install icalendar"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting asana\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ab/1c/6e1f731566a23a950b922faa1a0f3fd9ba673d7a08aff35a0567c87ad1f7/asana-0.10.3-py2.py3-none-any.whl (67kB)\n",
+            "\r\u001b[K     |████▉                           | 10kB 16.4MB/s eta 0:00:01\r\u001b[K     |█████████▊                      | 20kB 10.0MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 30kB 11.6MB/s eta 0:00:01\r\u001b[K     |███████████████████▌            | 40kB 9.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████▍       | 51kB 9.5MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▏  | 61kB 10.0MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 71kB 4.1MB/s \n",
+            "\u001b[?25hRequirement already satisfied: requests-oauthlib<2.0,>=0.8.0 in /usr/local/lib/python3.6/dist-packages (from asana) (1.3.0)\n",
+            "Requirement already satisfied: six==1.*,>=1.10 in /usr/local/lib/python3.6/dist-packages (from asana) (1.15.0)\n",
+            "Requirement already satisfied: requests==2.*,>=2.20.0 in /usr/local/lib/python3.6/dist-packages (from asana) (2.23.0)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.6/dist-packages (from requests-oauthlib<2.0,>=0.8.0->asana) (3.1.0)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests==2.*,>=2.20.0->asana) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests==2.*,>=2.20.0->asana) (2020.12.5)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests==2.*,>=2.20.0->asana) (3.0.4)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests==2.*,>=2.20.0->asana) (1.24.3)\n",
+            "Installing collected packages: asana\n",
+            "Successfully installed asana-0.10.3\n",
+            "Collecting icalendar\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c5/14/85ffbeefb591e8be0d51e4611750653549f60b27221ce6b0f9c724b3f5c0/icalendar-4.0.7-py2.py3-none-any.whl (74kB)\n",
+            "\u001b[K     |████████████████████████████████| 81kB 5.1MB/s \n",
+            "\u001b[?25hRequirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from icalendar) (2.8.1)\n",
+            "Requirement already satisfied: pytz in /usr/local/lib/python3.6/dist-packages (from icalendar) (2018.9)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil->icalendar) (1.15.0)\n",
+            "Installing collected packages: icalendar\n",
+            "Successfully installed icalendar-4.0.7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -61,9 +94,10 @@
         "from icalendar import Calendar, Event\r\n",
         "from datetime import datetime\r\n",
         "from datetime import timezone\r\n",
+        "from pytz import all_timezones\r\n",
         "import pytz"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -112,7 +146,7 @@
         "assignee = config[\"asana\"][\"assignee\"]\r\n",
         "workspace = config[\"asana\"][\"workspace\"]"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -124,7 +158,7 @@
         "# set up Asana client\r\n",
         "client = asana.Client.access_token(token)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -154,7 +188,7 @@
         "# set up events dictionary\r\n",
         "events = {k:[] for k in [\"uid\",\"name\",\"start\",\"end\"]}"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -188,7 +222,7 @@
         "    else:\r\n",
         "      events[\"end\"].append(comp.get(\"dtend\").dt)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -200,7 +234,7 @@
         "# create extract dataframe\r\n",
         "extract = pd.DataFrame(events)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -230,7 +264,7 @@
         "for task in result:\r\n",
         "  tasks.append(task[\"notes\"])"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -243,7 +277,7 @@
         "duplicates = tuple(tasks)\r\n",
         "extract = extract[~extract[\"uid\"].isin(duplicates)]"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -255,7 +289,7 @@
         "# delete past due entries\r\n",
         "extract = extract[extract[\"end\"] > datetime.now(tz=timezone.utc)]"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -267,7 +301,20 @@
         "# delete unused columns\r\n",
         "extract = extract[[\"name\",\"uid\",\"start\",\"end\"]]"
       ],
-      "execution_count": null,
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bnFx0ql2pxFl"
+      },
+      "source": [
+        "# set timezone to localize due dates TODO: add to config file\r\n",
+        "extract[\"start\"] = extract[\"start\"].dt.tz_convert('US/Pacific')\r\n",
+        "extract[\"end\"] = extract[\"end\"].dt.tz_convert('US/Pacific')"
+      ],
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -299,7 +346,7 @@
         "  temp[\"workspace\"] = workspace\r\n",
         "  load.append(temp)"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -313,7 +360,7 @@
         "for task in load:\r\n",
         "  validate.append(task[\"notes\"])"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -332,13 +379,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XGelTLKRW14I"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XGelTLKRW14I",
+        "outputId": "818bed73-b73b-4c03-a031-5c35cbde6153"
       },
       "source": [
         "len(load) > 0"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -361,15 +425,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "I6zP936FE5YR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I6zP936FE5YR",
+        "outputId": "72b40afe-eee9-4652-a043-2984badfbf2d"
       },
       "source": [
         "# post new assignments to Asana\r\n",
         "for data in load:\r\n",
         "  result = client.tasks.create_task(data)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/asana/client.py:155: UserWarning: This request is affected by the \"new_user_task_lists\" deprecation. Please visit this url for more info: https://forum.asana.com/t/update-on-our-planned-api-changes-to-user-task-lists-a-k-a-my-tasks/103828\n",
+            "Adding \"new_user_task_lists\" to your \"Asana-Enable\" or \"Asana-Disable\" header will opt in/out to this deprecation and suppress this warning.\n",
+            "  warnings.warn(message)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -383,7 +461,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PQRPaUKCFF0R"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PQRPaUKCFF0R",
+        "outputId": "63ef6c06-0a21-4446-ad0e-4a48f5531cf7"
       },
       "source": [
         "# set up task list\r\n",
@@ -398,8 +480,21 @@
         "test = set(tasks).intersection(validate)\r\n",
         "len(validate) == len(test)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "code",
