localize due date

--- a/AsanaCanvasSync.ipynb
+++ b/AsanaCanvasSync.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "AsanaCanvasSync.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1r9XLb1gwwnhG7Ul-R3nbEXXSDO2AlVTA",
       "authorship_tag": "ABX9TyMvxquXoROQyJneZY7XWUIi",
