--- a/AsanaCanvasSync.ipynb
+++ b/AsanaCanvasSync.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1r9XLb1gwwnhG7Ul-R3nbEXXSDO2AlVTA",
-      "authorship_tag": "ABX9TyMvxquXoROQyJneZY7XWUIi",
+      "authorship_tag": "ABX9TyOhW3VMAHRzwJOhVP6Nc6ZE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,8 +42,8 @@
         "id": "-i3MGTPJDTkg"
       },
       "source": [
-        "# install required packages\r\n",
-        "%pip install asana\r\n",
+        "# install required packages\n",
+        "%pip install asana\n",
         "%pip install icalendar"
       ],
       "execution_count": null,
@@ -55,18 +55,18 @@
         "id": "AxmCCPZMEoEJ"
       },
       "source": [
-        "# import libraries\r\n",
-        "import requests\r\n",
-        "import json\r\n",
-        "import pandas as pd\r\n",
-        "import asana\r\n",
-        "from icalendar import Calendar, Event\r\n",
-        "from datetime import datetime\r\n",
-        "from datetime import timezone\r\n",
-        "from pytz import all_timezones\r\n",
+        "# import libraries\n",
+        "import requests\n",
+        "import json\n",
+        "import pandas as pd\n",
+        "import asana\n",
+        "from icalendar import Calendar, Event\n",
+        "from datetime import datetime\n",
+        "from datetime import timezone\n",
+        "from pytz import all_timezones\n",
         "import pytz"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +75,9 @@
         "id": "klUVmLpyZQOZ"
       },
       "source": [
-        "# TODO prompt users to upload config.json"
+        "# TODO prompt users to upload config.json\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "execution_count": null,
       "outputs": []
@@ -86,12 +88,12 @@
         "id": "bBsMiCU2HX9E"
       },
       "source": [
-        "## Attention!\r\n",
-        "\r\n",
-        "\r\n",
-        "---\r\n",
-        "\r\n",
-        "\r\n",
+        "## Attention!\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "It is important that you map the location of the config.json below and that both packages above have been installed correctly before moving to the next step."
       ]
     },
@@ -101,21 +103,21 @@
         "id": "8hRvp_hAbhnN"
       },
       "source": [
-        "# read config variables into environment\r\n",
-        "config_path = \"/content/config.json\"\r\n",
-        "\r\n",
-        "with open(config_path) as json_file:\r\n",
-        "    config = json.load(json_file)\r\n",
-        "\r\n",
-        "# TODO validate config.json schema\r\n",
-        "\r\n",
-        "canvas = config[\"canvas\"][\"url\"]\r\n",
-        "token = config[\"asana\"][\"token\"]\r\n",
-        "project = config[\"asana\"][\"project_gid\"]\r\n",
-        "assignee = config[\"asana\"][\"assignee\"]\r\n",
+        "# read config variables into environment\n",
+        "config_path = \"/content/drive/MyDrive/Colab Notebooks/config.json\"\n",
+        "\n",
+        "with open(config_path) as json_file:\n",
+        "    config = json.load(json_file)\n",
+        "\n",
+        "# TODO validate config.json schema\n",
+        "\n",
+        "canvas = config[\"canvas\"][\"url\"]\n",
+        "token = config[\"asana\"][\"token\"]\n",
+        "project = config[\"asana\"][\"project_gid\"]\n",
+        "assignee = config[\"asana\"][\"assignee\"]\n",
         "workspace = config[\"asana\"][\"workspace\"]"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,10 +126,10 @@
         "id": "6t3_G5Dr6nrJ"
       },
       "source": [
-        "# set up Asana client\r\n",
+        "# set up Asana client\n",
         "client = asana.Client.access_token(token)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,10 +156,10 @@
         "id": "c_c7NK75xyBI"
       },
       "source": [
-        "# set up events dictionary\r\n",
+        "# set up events dictionary\n",
         "events = {k:[] for k in [\"uid\",\"name\",\"start\",\"end\"]}"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,32 +168,32 @@
         "id": "1Eg6_QsdErio"
       },
       "source": [
-        "# import Canvas ics\r\n",
-        "cal = Calendar.from_ical(requests.get(canvas).text)\r\n",
-        "\r\n",
-        "# set timezone to standardize timeawareness\r\n",
-        "utc = pytz.utc\r\n",
-        "\r\n",
-        "# read ics into dictionary of events\r\n",
-        "for comp in cal.walk():\r\n",
-        "  if comp.get(\"UID\") == None: continue # skip blank items\r\n",
-        "  if comp.get(\"SUMMARY\") == None: continue # skip blank items\r\n",
-        "  if comp.get(\"UID\").startswith(\"event-assignment\"):\r\n",
-        "    events[\"uid\"].append(str(comp.get(\"UID\")))\r\n",
-        "  else: continue # skip events that are not assignments\r\n",
-        "  events[\"name\"].append(str(comp.get(\"SUMMARY\")))\r\n",
-        "  if hasattr(comp.get(\"dtstart\"), \"dt\"):\r\n",
-        "    if comp.get(\"dtstart\").dt.tzname() == None:\r\n",
-        "      events[\"start\"].append(utc.localize(comp.get(\"dtstart\").dt))\r\n",
-        "    else:\r\n",
-        "       events[\"start\"].append(comp.get(\"dtstart\").dt)\r\n",
-        "  if hasattr(comp.get(\"dtend\"), \"dt\"):\r\n",
-        "    if comp.get(\"dtend\").dt.tzname() == None:\r\n",
-        "      events[\"end\"].append(utc.localize(comp.get(\"dtend\").dt))\r\n",
-        "    else:\r\n",
+        "# import Canvas ics\n",
+        "cal = Calendar.from_ical(requests.get(canvas).text)\n",
+        "\n",
+        "# set timezone to standardize timeawareness\n",
+        "utc = pytz.utc\n",
+        "\n",
+        "# read ics into dictionary of events\n",
+        "for comp in cal.walk():\n",
+        "  if comp.get(\"UID\") == None: continue # skip blank items\n",
+        "  if comp.get(\"SUMMARY\") == None: continue # skip blank items\n",
+        "  if comp.get(\"UID\").startswith(\"event-assignment\"):\n",
+        "    events[\"uid\"].append(str(comp.get(\"UID\")))\n",
+        "  else: continue # skip events that are not assignments\n",
+        "  events[\"name\"].append(str(comp.get(\"SUMMARY\")))\n",
+        "  if hasattr(comp.get(\"dtstart\"), \"dt\"):\n",
+        "    if comp.get(\"dtstart\").dt.tzname() == None:\n",
+        "      events[\"start\"].append(utc.localize(comp.get(\"dtstart\").dt))\n",
+        "    else:\n",
+        "       events[\"start\"].append(comp.get(\"dtstart\").dt)\n",
+        "  if hasattr(comp.get(\"dtend\"), \"dt\"):\n",
+        "    if comp.get(\"dtend\").dt.tzname() == None:\n",
+        "      events[\"end\"].append(utc.localize(comp.get(\"dtend\").dt))\n",
+        "    else:\n",
         "      events[\"end\"].append(comp.get(\"dtend\").dt)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -200,10 +202,10 @@
         "id": "55tu4cp1jq4B"
       },
       "source": [
-        "# create extract dataframe\r\n",
+        "# create extract dataframe\n",
         "extract = pd.DataFrame(events)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,19 +223,19 @@
         "id": "DOXQPgrbS9As"
       },
       "source": [
-        "# set up task list\r\n",
-        "tasks = []\r\n",
-        "\r\n",
-        "# set up Asana client\r\n",
-        "homework = {\"project\": project}\r\n",
-        "options = \"notes\"\r\n",
-        "result = client.tasks.get_tasks(homework,opt_fields=options)\r\n",
-        "\r\n",
-        "# read homework project\r\n",
-        "for task in result:\r\n",
+        "# set up task list\n",
+        "tasks = []\n",
+        "\n",
+        "# set up Asana client\n",
+        "homework = {\"project\": project}\n",
+        "options = \"notes\"\n",
+        "result = client.tasks.get_tasks(homework,opt_fields=options)\n",
+        "\n",
+        "# read homework project\n",
+        "for task in result:\n",
         "  tasks.append(task[\"notes\"])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -242,11 +244,22 @@
         "id": "zAU28tZm383i"
       },
       "source": [
-        "# delete duplicates from extract table\r\n",
-        "duplicates = tuple(tasks)\r\n",
+        "# delete duplicates from extract table\n",
+        "duplicates = tuple(tasks)\n",
         "extract = extract[~extract[\"uid\"].isin(duplicates)]"
       ],
-      "execution_count": 15,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jKj-HTo2DK2k"
+      },
+      "source": [
+        "#TODO create condition to update due dates"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -255,10 +268,10 @@
         "id": "ctGkVUJFVCUw"
       },
       "source": [
-        "# delete past due entries\r\n",
+        "# delete past due entries\n",
         "extract = extract[extract[\"end\"] > datetime.now(tz=timezone.utc)]"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,10 +280,10 @@
         "id": "deVPuwTkgGeL"
       },
       "source": [
-        "# delete unused columns\r\n",
+        "# delete unused columns\n",
         "extract = extract[[\"name\",\"uid\",\"start\",\"end\"]]"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,11 +292,11 @@
         "id": "bnFx0ql2pxFl"
       },
       "source": [
-        "# set timezone to localize due dates TODO: add to config file\r\n",
-        "extract[\"start\"] = extract[\"start\"].dt.tz_convert('US/Pacific')\r\n",
+        "# set timezone to localize due dates TODO: add to config file\n",
+        "extract[\"start\"] = extract[\"start\"].dt.tz_convert('US/Pacific')\n",
         "extract[\"end\"] = extract[\"end\"].dt.tz_convert('US/Pacific')"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,21 +314,21 @@
         "id": "44cnfhB_P_o0"
       },
       "source": [
-        "# iterate over rows to create list of dictionaries\r\n",
-        "load = []\r\n",
-        "for index, row in extract.iterrows():\r\n",
-        "  temp = {}\r\n",
-        "  temp[\"assignee\"] = assignee\r\n",
-        "  temp[\"due_on\"] = row[\"end\"].strftime(\"%Y-%m-%d\")\r\n",
-        "  temp[\"name\"] = row[\"name\"]\r\n",
-        "  temp[\"notes\"] = row[\"uid\"]\r\n",
-        "  temp[\"projects\"] = [project]\r\n",
-        "  temp[\"resource_subtype\"] = \"default_task\"\r\n",
-        "  #temp[\"start_on\"] = row[\"start\"].strftime(\"%Y-%m-%d\") # paid feature\r\n",
-        "  temp[\"workspace\"] = workspace\r\n",
+        "# iterate over rows to create list of dictionaries\n",
+        "load = []\n",
+        "for index, row in extract.iterrows():\n",
+        "  temp = {}\n",
+        "  temp[\"assignee\"] = assignee\n",
+        "  temp[\"due_on\"] = row[\"end\"].strftime(\"%Y-%m-%d\")\n",
+        "  temp[\"name\"] = row[\"name\"]\n",
+        "  temp[\"notes\"] = row[\"uid\"]\n",
+        "  temp[\"projects\"] = [project]\n",
+        "  temp[\"resource_subtype\"] = \"default_task\"\n",
+        "  #temp[\"start_on\"] = row[\"start\"].strftime(\"%Y-%m-%d\") # paid feature\n",
+        "  temp[\"workspace\"] = workspace\n",
         "  load.append(temp)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,12 +337,12 @@
         "id": "z1lyPbbCYPfe"
       },
       "source": [
-        "# set up validation list\r\n",
-        "validate = []\r\n",
-        "for task in load:\r\n",
+        "# set up validation list\n",
+        "validate = []\n",
+        "for task in load:\n",
         "  validate.append(task[\"notes\"])"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -338,40 +351,23 @@
         "id": "EU7_4tmSWI6n"
       },
       "source": [
-        "## Check Data\r\n",
-        "\r\n",
-        "---\r\n",
-        "\r\n",
+        "## Check Data\n",
+        "\n",
+        "---\n",
+        "\n",
         "For running as an automation, be sure to wrap the load tasks with the following check."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XGelTLKRW14I",
-        "outputId": "818bed73-b73b-4c03-a031-5c35cbde6153"
+        "id": "XGelTLKRW14I"
       },
       "source": [
         "len(load) > 0"
       ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 26
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -381,6 +377,17 @@
       "source": [
         "## Run Load"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K5rb96osDZUc"
+      },
+      "source": [
+        "#TODO split new vs update"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -394,29 +401,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "I6zP936FE5YR",
-        "outputId": "72b40afe-eee9-4652-a043-2984badfbf2d"
+        "id": "I6zP936FE5YR"
       },
       "source": [
-        "# post new assignments to Asana\r\n",
-        "for data in load:\r\n",
+        "# post new assignments to Asana\n",
+        "for data in load:\n",
         "  result = client.tasks.create_task(data)"
       ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/asana/client.py:155: UserWarning: This request is affected by the \"new_user_task_lists\" deprecation. Please visit this url for more info: https://forum.asana.com/t/update-on-our-planned-api-changes-to-user-task-lists-a-k-a-my-tasks/103828\n",
-            "Adding \"new_user_task_lists\" to your \"Asana-Enable\" or \"Asana-Disable\" header will opt in/out to this deprecation and suppress this warning.\n",
-            "  warnings.warn(message)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -430,40 +423,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PQRPaUKCFF0R",
-        "outputId": "63ef6c06-0a21-4446-ad0e-4a48f5531cf7"
+        "id": "PQRPaUKCFF0R"
       },
       "source": [
-        "# set up task list\r\n",
-        "tasks = []\r\n",
-        "\r\n",
-        "# read homework project\r\n",
-        "result = client.tasks.get_tasks(homework,opt_fields=options)\r\n",
-        "for task in result:\r\n",
-        "  tasks.append(task[\"notes\"])\r\n",
-        "\r\n",
-        "# compare list with validation\r\n",
-        "test = set(tasks).intersection(validate)\r\n",
+        "# set up task list\n",
+        "tasks = []\n",
+        "\n",
+        "# read homework project\n",
+        "result = client.tasks.get_tasks(homework,opt_fields=options)\n",
+        "for task in result:\n",
+        "  tasks.append(task[\"notes\"])\n",
+        "\n",
+        "# compare list with validation\n",
+        "test = set(tasks).intersection(validate)\n",
         "len(validate) == len(test)"
       ],
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 28
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
